[gd_scene load_steps=22 format=3 uid="uid://bu6ql3rpnuvic"]

[ext_resource type="Script" path="res://Scripts/CharacterMovement.gd" id="1_1ajbp"]
[ext_resource type="Script" path="res://Scripts/InteractRay.gd" id="2_dbs4o"]
[ext_resource type="FontFile" uid="uid://d3ukvs1jnedk8" path="res://Fonts/ComicSans.ttf" id="3_pynnh"]
[ext_resource type="Material" path="res://Model.noimport/jauk/ENTR_UIRE.material" id="3_tt46o"]
[ext_resource type="Material" path="res://Model.noimport/jauk/Material_006.material" id="4_788dk"]
[ext_resource type="Material" path="res://Model.noimport/jauk/SKIN.material" id="5_5vbcs"]
[ext_resource type="Script" path="res://Scripts/inventory.gd" id="8_jv40k"]
[ext_resource type="Texture2D" uid="uid://blagkpk3qucpi" path="res://Images/file.png" id="9_d0grp"]
[ext_resource type="Texture2D" uid="uid://clji58xnkfhnc" path="res://Images/knife.png" id="10_q5xid"]
[ext_resource type="Texture2D" uid="uid://6u8dtv01iexy" path="res://Images/syringe-145002__340.webp" id="11_p0neb"]

[sub_resource type="Animation" id="8"]
resource_name = "Cube001Action"
length = 3.33333

[sub_resource type="Animation" id="9"]
resource_name = "bundaAction"
length = 3.33333

[sub_resource type="Animation" id="10"]
resource_name = "kehaAction"
length = 3.33333

[sub_resource type="Animation" id="11"]
resource_name = "legAction"
length = 3.33333

[sub_resource type="Animation" id="12"]
resource_name = "napp2001Action"
length = 3.33333

[sub_resource type="Animation" id="13"]
resource_name = "napp2003Action"
length = 3.33333

[sub_resource type="Animation" id="14"]
resource_name = "regAction"
length = 3.33333

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5fh1y"]
_data = {
"Cube001Action": SubResource("8"),
"bundaAction": SubResource("9"),
"kehaAction": SubResource("10"),
"legAction": SubResource("11"),
"napp2001Action": SubResource("12"),
"napp2003Action": SubResource("13"),
"regAction": SubResource("14")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_g2353"]
size = Vector3(1, 3.42926, 1)

[sub_resource type="FontVariation" id="FontVariation_4114j"]
base_font = ExtResource("3_pynnh")

[sub_resource type="ArrayMesh" id="5"]
resource_name = "JAKEPAUL_Cube024"
_surfaces = [{
"aabb": AABB(-1.0489, -0.997705, 8.52809, 4.2697, 2.09611, 2.20379),
"attribute_data": PackedByteArray(0, 0, 0, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 0, 0, 0, 0, 192, 62, 0, 0, 128, 63, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 128, 63, 0, 0, 96, 63, 0, 0, 128, 62, 0, 0, 0, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 64, 63, 0, 0, 192, 62, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 96, 63, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 128, 107, 63, 0, 0, 32, 63, 0, 128, 107, 63, 0, 0, 96, 63, 0, 224, 168, 62, 0, 0, 96, 63, 0, 224, 168, 62, 0, 0, 0, 62, 0, 0, 166, 62, 0, 0, 0, 62, 0, 0, 166, 62, 0, 0, 192, 62, 0, 224, 108, 63, 0, 0, 192, 62, 0, 224, 108, 63, 0, 0, 32, 63, 0, 128, 169, 62, 0, 0, 32, 63, 0, 128, 169, 62, 0, 0, 32, 63, 0, 128, 169, 62, 0, 0, 32, 63, 0, 128, 169, 62, 0, 0, 192, 62, 0, 224, 169, 62, 0, 0, 192, 62, 0, 224, 169, 62, 0, 0, 192, 62, 0, 224, 169, 62, 0, 0, 192, 62, 0, 224, 169, 62),
"format": 4119,
"index_count": 60,
"index_data": PackedByteArray(2, 0, 25, 0, 4, 0, 2, 0, 31, 0, 25, 0, 8, 0, 22, 0, 10, 0, 8, 0, 19, 0, 22, 0, 20, 0, 35, 0, 23, 0, 20, 0, 39, 0, 35, 0, 12, 0, 3, 0, 15, 0, 12, 0, 1, 0, 3, 0, 6, 0, 36, 0, 18, 0, 6, 0, 28, 0, 36, 0, 21, 0, 26, 0, 11, 0, 21, 0, 32, 0, 26, 0, 30, 0, 9, 0, 24, 0, 30, 0, 7, 0, 9, 0, 29, 0, 13, 0, 37, 0, 29, 0, 0, 0, 13, 0, 33, 0, 5, 0, 27, 0, 33, 0, 16, 0, 5, 0, 38, 0, 17, 0, 34, 0, 38, 0, 14, 0, 17, 0),
"material": ExtResource("4_788dk"),
"primitive": 3,
"vertex_count": 40,
"vertex_data": PackedByteArray(120, 66, 134, 191, 38, 207, 102, 191, 235, 51, 39, 65, 0, 0, 10, 132, 188, 222, 126, 191, 120, 66, 134, 191, 38, 207, 102, 191, 235, 51, 39, 65, 192, 223, 0, 0, 3, 130, 250, 253, 120, 66, 134, 191, 38, 207, 102, 191, 235, 51, 39, 65, 6, 130, 212, 106, 253, 126, 250, 253, 14, 170, 129, 191, 98, 9, 139, 63, 8, 58, 39, 65, 192, 223, 0, 0, 255, 127, 252, 254, 14, 170, 129, 191, 98, 9, 139, 63, 8, 58, 39, 65, 6, 130, 212, 106, 3, 130, 250, 253, 14, 170, 129, 191, 98, 9, 139, 63, 8, 58, 39, 65, 244, 249, 252, 126, 6, 3, 96, 176, 247, 149, 147, 63, 118, 144, 124, 191, 43, 125, 8, 65, 0, 0, 16, 135, 248, 252, 126, 191, 247, 149, 147, 63, 118, 144, 124, 191, 43, 125, 8, 65, 32, 143, 10, 5, 9, 133, 246, 251, 247, 149, 147, 63, 118, 144, 124, 191, 43, 125, 8, 65, 6, 130, 252, 126, 39, 148, 232, 244, 70, 145, 161, 63, 225, 1, 136, 63, 44, 230, 8, 65, 32, 143, 10, 5, 9, 133, 244, 250, 70, 145, 161, 63, 225, 1, 136, 63, 44, 230, 8, 65, 6, 130, 252, 126, 11, 134, 246, 251, 70, 145, 161, 63, 225, 1, 136, 63, 44, 230, 8, 65, 252, 253, 250, 125, 4, 2, 124, 190, 80, 20, 102, 190, 38, 207, 102, 191, 199, 181, 43, 65, 192, 223, 0, 0, 1, 129, 252, 254, 80, 20, 102, 190, 38, 207, 102, 191, 199, 181, 43, 65, 0, 0, 10, 132, 192, 224, 126, 191, 80, 20, 102, 190, 38, 207, 102, 191, 199, 181, 43, 65, 46, 23, 254, 254, 255, 127, 250, 253, 80, 20, 102, 190, 109, 152, 140, 63, 199, 181, 43, 65, 192, 223, 0, 0, 255, 127, 252, 254, 80, 20, 102, 190, 109, 152, 140, 63, 199, 181, 43, 65, 244, 249, 252, 126, 6, 3, 92, 174, 80, 20, 102, 190, 109, 152, 140, 63, 199, 181, 43, 65, 46, 23, 254, 254, 9, 133, 248, 252, 224, 98, 20, 64, 156, 105, 127, 191, 11, 115, 8, 65, 0, 0, 16, 135, 252, 254, 124, 190, 224, 98, 20, 64, 156, 105, 127, 191, 11, 115, 8, 65, 6, 130, 252, 126, 57, 157, 222, 239, 224, 98, 20, 64, 156, 105, 127, 191, 11, 115, 8, 65, 218, 109, 168, 211, 41, 149, 232, 244, 154, 149, 61, 64, 230, 184, 137, 63, 206, 220, 8, 65, 252, 253, 250, 125, 4, 2, 124, 190, 154, 149, 61, 64, 230, 184, 137, 63, 206, 220, 8, 65, 6, 130, 252, 126, 29, 143, 236, 246, 154, 149, 61, 64, 230, 184, 137, 63, 206, 220, 8, 65, 218, 109, 168, 211, 43, 150, 226, 241, 46, 63, 176, 63, 88, 94, 137, 63, 198, 210, 31, 65, 32, 143, 10, 5, 9, 133, 244, 250, 46, 63, 176, 63, 88, 94, 137, 63, 198, 210, 31, 65, 6, 130, 212, 106, 251, 125, 250, 253, 46, 63, 176, 63, 88, 94, 137, 63, 198, 210, 31, 65, 252, 253, 250, 125, 4, 2, 124, 190, 46, 63, 176, 63, 88, 94, 137, 63, 198, 210, 31, 65, 244, 249, 252, 126, 4, 2, 126, 191, 21, 213, 164, 63, 38, 73, 109, 191, 246, 120, 31, 65, 0, 0, 16, 135, 244, 250, 126, 191, 21, 213, 164, 63, 38, 73, 109, 191, 246, 120, 31, 65, 0, 0, 10, 132, 236, 246, 126, 191, 21, 213, 164, 63, 38, 73, 109, 191, 246, 120, 31, 65, 32, 143, 10, 5, 9, 133, 244, 250, 21, 213, 164, 63, 38, 73, 109, 191, 246, 120, 31, 65, 6, 130, 212, 106, 245, 122, 246, 251, 132, 33, 78, 64, 233, 169, 139, 63, 197, 154, 31, 65, 252, 253, 250, 125, 4, 2, 124, 190, 132, 33, 78, 64, 233, 169, 139, 63, 197, 154, 31, 65, 244, 249, 252, 126, 4, 2, 106, 181, 132, 33, 78, 64, 233, 169, 139, 63, 197, 154, 31, 65, 46, 23, 254, 254, 27, 142, 240, 248, 132, 33, 78, 64, 233, 169, 139, 63, 197, 154, 31, 65, 218, 109, 168, 211, 41, 149, 230, 243, 222, 140, 64, 64, 202, 222, 110, 191, 37, 101, 31, 65, 0, 0, 16, 135, 248, 252, 126, 191, 222, 140, 64, 64, 202, 222, 110, 191, 37, 101, 31, 65, 0, 0, 10, 132, 240, 248, 126, 191, 222, 140, 64, 64, 202, 222, 110, 191, 37, 101, 31, 65, 46, 23, 254, 254, 17, 137, 244, 250, 222, 140, 64, 64, 202, 222, 110, 191, 37, 101, 31, 65, 218, 109, 168, 211, 45, 151, 232, 244)
}, {
"aabb": AABB(-6.87272, -1.60824, -21.9184, 10.2231, 3.10494, 28.3386),
"attribute_data": PackedByteArray(0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 128, 63, 0, 0, 96, 63, 0, 0, 128, 62, 0, 0, 0, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 0, 0, 0, 0, 192, 62, 0, 0, 128, 63, 0, 32, 15, 63, 0, 192, 16, 63, 0, 32, 15, 63, 0, 192, 16, 63, 0, 32, 15, 63, 0, 192, 16, 63, 0, 0, 32, 63, 0, 128, 253, 62, 0, 0, 32, 63, 0, 128, 253, 62, 0, 0, 32, 63, 0, 128, 253, 62, 0, 0, 32, 63, 0, 64, 0, 63, 0, 160, 225, 62, 0, 192, 16, 63, 0, 160, 225, 62, 0, 192, 16, 63, 0, 160, 225, 62, 0, 192, 16, 63, 0, 0, 192, 62, 0, 128, 253, 62, 0, 0, 192, 62, 0, 128, 253, 62, 0, 0, 192, 62, 0, 128, 253, 62, 0, 0, 192, 62, 0, 96, 0, 63, 0, 32, 15, 63, 0, 32, 47, 63, 0, 32, 15, 63, 0, 32, 47, 63, 0, 32, 15, 63, 0, 32, 47, 63, 0, 0, 32, 63, 0, 160, 63, 63, 0, 0, 32, 63, 0, 32, 65, 63, 0, 0, 32, 63, 0, 32, 65, 63, 0, 0, 96, 63, 0, 128, 253, 62, 0, 160, 225, 62, 0, 32, 47, 63, 0, 160, 225, 62, 0, 32, 47, 63, 0, 160, 225, 62, 0, 32, 47, 63, 0, 0, 0, 62, 0, 128, 253, 62, 0, 224, 191, 62, 0, 32, 65, 63, 0, 224, 191, 62, 0, 32, 65, 63, 0, 0, 192, 62, 0, 160, 63, 63, 0, 224, 191, 62, 0, 192, 190, 62, 0, 224, 191, 62, 0, 192, 190, 62, 0, 224, 191, 62, 0, 192, 190, 62, 0, 224, 191, 62, 0, 192, 190, 62, 0, 0, 32, 63, 0, 192, 190, 62, 0, 0, 32, 63, 0, 192, 190, 62, 0, 0, 32, 63, 0, 192, 190, 62, 0, 0, 32, 63, 0, 192, 190, 62, 0, 0, 32, 63, 0, 128, 96, 63, 0, 0, 32, 63, 0, 128, 96, 63, 0, 0, 96, 63, 0, 192, 190, 62, 0, 0, 96, 63, 0, 192, 190, 62, 0, 0, 0, 62, 0, 192, 190, 62, 0, 0, 0, 62, 0, 192, 190, 62, 0, 0, 192, 62, 0, 128, 96, 63, 0, 0, 192, 62, 0, 128, 96, 63),
"format": 4119,
"index_count": 84,
"index_data": PackedByteArray(53, 0, 4, 0, 41, 0, 53, 0, 9, 0, 4, 0, 3, 0, 6, 0, 0, 0, 3, 0, 10, 0, 6, 0, 55, 0, 30, 0, 49, 0, 55, 0, 37, 0, 30, 0, 45, 0, 8, 0, 51, 0, 45, 0, 1, 0, 8, 0, 42, 0, 2, 0, 46, 0, 42, 0, 5, 0, 2, 0, 25, 0, 35, 0, 39, 0, 25, 0, 20, 0, 35, 0, 16, 0, 21, 0, 23, 0, 16, 0, 14, 0, 21, 0, 26, 0, 38, 0, 33, 0, 26, 0, 31, 0, 38, 0, 29, 0, 12, 0, 18, 0, 29, 0, 27, 0, 12, 0, 34, 0, 13, 0, 28, 0, 34, 0, 19, 0, 13, 0, 24, 0, 47, 0, 17, 0, 24, 0, 43, 0, 47, 0, 15, 0, 50, 0, 32, 0, 15, 0, 44, 0, 50, 0, 11, 0, 48, 0, 7, 0, 11, 0, 54, 0, 48, 0, 36, 0, 40, 0, 22, 0, 36, 0, 52, 0, 40, 0),
"material": ExtResource("3_tt46o"),
"primitive": 3,
"vertex_count": 56,
"vertex_data": PackedByteArray(198, 224, 214, 63, 88, 147, 34, 63, 242, 8, 204, 64, 252, 253, 10, 5, 69, 163, 222, 239, 198, 224, 214, 63, 88, 147, 34, 63, 242, 8, 204, 64, 0, 0, 246, 123, 2, 1, 130, 193, 198, 224, 214, 63, 88, 147, 34, 63, 242, 8, 204, 64, 192, 96, 220, 237, 47, 152, 232, 244, 37, 41, 155, 63, 89, 70, 53, 191, 180, 114, 205, 64, 252, 253, 10, 5, 63, 160, 224, 240, 37, 41, 155, 63, 89, 70, 53, 191, 180, 114, 205, 64, 0, 0, 12, 133, 248, 252, 126, 191, 37, 41, 155, 63, 89, 70, 53, 191, 180, 114, 205, 64, 192, 96, 220, 237, 49, 153, 232, 244, 107, 238, 24, 192, 147, 142, 37, 63, 194, 200, 200, 64, 252, 253, 10, 5, 47, 152, 234, 245, 107, 238, 24, 192, 147, 142, 37, 63, 194, 200, 200, 64, 46, 150, 18, 9, 27, 142, 244, 250, 107, 238, 24, 192, 147, 142, 37, 63, 194, 200, 200, 64, 0, 0, 246, 123, 2, 1, 128, 192, 101, 173, 38, 192, 49, 241, 64, 191, 72, 41, 203, 64, 0, 0, 12, 133, 246, 251, 126, 191, 101, 173, 38, 192, 49, 241, 64, 191, 72, 41, 203, 64, 252, 253, 10, 5, 41, 149, 236, 246, 101, 173, 38, 192, 49, 241, 64, 191, 72, 41, 203, 64, 46, 150, 18, 9, 27, 142, 244, 250, 198, 183, 49, 63, 66, 30, 48, 63, 40, 39, 175, 193, 124, 62, 255, 127, 255, 127, 188, 222, 198, 183, 49, 63, 66, 30, 48, 63, 40, 39, 175, 193, 250, 125, 252, 126, 255, 127, 252, 254, 198, 183, 49, 63, 66, 30, 48, 63, 40, 39, 175, 193, 252, 126, 64, 159, 255, 127, 252, 254, 48, 108, 86, 64, 130, 142, 191, 63, 190, 127, 168, 193, 0, 0, 246, 123, 2, 1, 126, 191, 48, 108, 86, 64, 130, 142, 191, 63, 190, 127, 168, 193, 252, 126, 64, 159, 255, 127, 252, 254, 48, 108, 86, 64, 130, 142, 191, 63, 190, 127, 168, 193, 238, 119, 246, 250, 9, 133, 248, 252, 48, 108, 86, 64, 130, 142, 191, 63, 190, 127, 168, 193, 124, 62, 255, 127, 255, 127, 188, 222, 198, 183, 49, 63, 29, 175, 76, 191, 40, 39, 175, 193, 250, 125, 252, 126, 255, 127, 252, 254, 198, 183, 49, 63, 29, 175, 76, 191, 40, 39, 175, 193, 148, 74, 8, 131, 144, 72, 250, 253, 198, 183, 49, 63, 29, 175, 76, 191, 40, 39, 175, 193, 252, 126, 64, 159, 255, 127, 252, 254, 152, 221, 85, 64, 255, 191, 205, 191, 210, 127, 168, 193, 0, 0, 10, 132, 240, 248, 126, 191, 152, 221, 85, 64, 255, 191, 205, 191, 210, 127, 168, 193, 252, 126, 64, 159, 255, 127, 252, 254, 152, 221, 85, 64, 255, 191, 205, 191, 210, 127, 168, 193, 238, 119, 246, 250, 9, 133, 248, 252, 152, 221, 85, 64, 255, 191, 205, 191, 210, 127, 168, 193, 148, 74, 8, 131, 148, 74, 252, 254, 52, 184, 134, 192, 68, 30, 48, 63, 40, 39, 175, 193, 24, 139, 210, 105, 253, 126, 238, 247, 52, 184, 134, 192, 68, 30, 48, 63, 40, 39, 175, 193, 124, 62, 255, 127, 255, 127, 188, 222, 52, 184, 134, 192, 68, 30, 48, 63, 40, 39, 175, 193, 250, 125, 252, 126, 247, 123, 248, 252, 194, 202, 219, 192, 195, 147, 191, 63, 197, 127, 168, 193, 124, 62, 255, 127, 255, 127, 188, 222, 194, 202, 219, 192, 195, 147, 191, 63, 197, 127, 168, 193, 48, 151, 0, 0, 5, 131, 234, 245, 194, 202, 219, 192, 195, 147, 191, 63, 197, 127, 168, 193, 24, 139, 210, 105, 255, 127, 240, 248, 194, 202, 219, 192, 195, 147, 191, 63, 197, 127, 168, 193, 0, 0, 246, 123, 2, 1, 126, 191, 162, 227, 132, 192, 31, 175, 76, 191, 224, 88, 175, 193, 24, 139, 210, 105, 253, 126, 238, 247, 162, 227, 132, 192, 31, 175, 76, 191, 224, 88, 175, 193, 250, 125, 252, 126, 249, 124, 248, 252, 162, 227, 132, 192, 31, 175, 76, 191, 224, 88, 175, 193, 148, 74, 8, 131, 112, 184, 248, 252, 78, 237, 219, 192, 196, 218, 205, 191, 219, 123, 172, 193, 0, 0, 10, 132, 244, 250, 126, 191, 78, 237, 219, 192, 196, 218, 205, 191, 219, 123, 172, 193, 48, 151, 0, 0, 5, 131, 232, 244, 78, 237, 219, 192, 196, 218, 205, 191, 219, 123, 172, 193, 24, 139, 210, 105, 253, 126, 238, 247, 78, 237, 219, 192, 196, 218, 205, 191, 219, 123, 172, 193, 148, 74, 8, 131, 112, 184, 248, 252, 50, 202, 64, 64, 150, 49, 148, 191, 116, 76, 231, 192, 0, 0, 10, 132, 248, 252, 126, 191, 50, 202, 64, 64, 150, 49, 148, 191, 116, 76, 231, 192, 0, 0, 12, 133, 250, 253, 126, 191, 50, 202, 64, 64, 150, 49, 148, 191, 116, 76, 231, 192, 192, 96, 220, 237, 41, 149, 232, 244, 50, 202, 64, 64, 150, 49, 148, 191, 116, 76, 231, 192, 238, 119, 246, 250, 11, 134, 248, 252, 102, 255, 79, 64, 23, 108, 136, 63, 56, 1, 232, 192, 0, 0, 246, 123, 2, 1, 126, 191, 102, 255, 79, 64, 23, 108, 136, 63, 56, 1, 232, 192, 0, 0, 246, 123, 2, 1, 128, 192, 102, 255, 79, 64, 23, 108, 136, 63, 56, 1, 232, 192, 192, 96, 220, 237, 39, 148, 232, 244, 102, 255, 79, 64, 23, 108, 136, 63, 56, 1, 232, 192, 238, 119, 246, 250, 11, 134, 248, 252, 217, 48, 121, 192, 134, 45, 137, 63, 92, 161, 233, 192, 46, 150, 18, 9, 23, 140, 242, 249, 217, 48, 121, 192, 134, 45, 137, 63, 92, 161, 233, 192, 48, 151, 0, 0, 1, 129, 252, 254, 217, 48, 121, 192, 134, 45, 137, 63, 92, 161, 233, 192, 0, 0, 246, 123, 2, 1, 126, 191, 217, 48, 121, 192, 134, 45, 137, 63, 92, 161, 233, 192, 0, 0, 246, 123, 2, 1, 128, 192, 114, 25, 128, 192, 174, 41, 151, 191, 20, 113, 232, 192, 0, 0, 10, 132, 252, 254, 126, 191, 114, 25, 128, 192, 174, 41, 151, 191, 20, 113, 232, 192, 0, 0, 12, 133, 250, 253, 126, 191, 114, 25, 128, 192, 174, 41, 151, 191, 20, 113, 232, 192, 46, 150, 18, 9, 23, 140, 242, 249, 114, 25, 128, 192, 174, 41, 151, 191, 20, 113, 232, 192, 48, 151, 0, 0, 255, 127, 250, 253)
}, {
"aabb": AABB(-2.41517, -1.04057, 6.18472, 5.72482, 2.1793, 2.4434),
"attribute_data": PackedByteArray(0, 0, 0, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 0, 0, 0, 0, 192, 62, 0, 0, 128, 63, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 128, 63, 0, 0, 96, 63, 0, 0, 128, 62, 0, 0, 0, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 64, 63, 0, 0, 192, 62, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 32, 63, 0, 0, 64, 63, 0, 0, 96, 63, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 32, 63, 0, 0, 128, 62, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 192, 62, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63, 0, 0, 32, 63, 0, 0, 0, 63),
"format": 4119,
"index_count": 36,
"index_data": PackedByteArray(2, 0, 9, 0, 4, 0, 2, 0, 7, 0, 9, 0, 8, 0, 22, 0, 10, 0, 8, 0, 19, 0, 22, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 12, 0, 3, 0, 15, 0, 12, 0, 1, 0, 3, 0, 6, 0, 13, 0, 18, 0, 6, 0, 0, 0, 13, 0, 21, 0, 5, 0, 11, 0, 21, 0, 16, 0, 5, 0),
"material": ExtResource("5_5vbcs"),
"primitive": 3,
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 105, 38, 188, 126, 3, 131, 191, 186, 12, 10, 65, 36, 18, 8, 131, 248, 252, 130, 193, 0, 105, 38, 188, 126, 3, 131, 191, 186, 12, 10, 65, 0, 0, 8, 4, 239, 119, 250, 253, 0, 105, 38, 188, 126, 3, 131, 191, 186, 12, 10, 65, 134, 194, 12, 6, 23, 140, 248, 252, 64, 105, 164, 189, 131, 45, 143, 63, 245, 234, 7, 65, 0, 0, 8, 4, 29, 143, 242, 249, 64, 105, 164, 189, 131, 45, 143, 63, 245, 234, 7, 65, 134, 194, 12, 6, 23, 140, 252, 254, 64, 105, 164, 189, 131, 45, 143, 63, 245, 234, 7, 65, 52, 26, 248, 124, 4, 2, 132, 194, 33, 146, 26, 192, 184, 41, 74, 191, 78, 198, 200, 64, 36, 18, 8, 131, 244, 250, 128, 192, 33, 146, 26, 192, 184, 41, 74, 191, 78, 198, 200, 64, 134, 194, 12, 6, 23, 140, 240, 248, 33, 146, 26, 192, 184, 41, 74, 191, 78, 198, 200, 64, 236, 118, 16, 135, 49, 153, 234, 245, 123, 178, 10, 192, 112, 33, 46, 63, 54, 233, 197, 64, 134, 194, 12, 6, 23, 140, 244, 250, 123, 178, 10, 192, 112, 33, 46, 63, 54, 233, 197, 64, 236, 118, 16, 135, 47, 152, 236, 246, 123, 178, 10, 192, 112, 33, 46, 63, 54, 233, 197, 64, 52, 26, 248, 124, 2, 1, 134, 195, 163, 140, 44, 64, 109, 49, 133, 191, 163, 40, 9, 65, 0, 0, 8, 4, 41, 149, 236, 246, 163, 140, 44, 64, 109, 49, 133, 191, 163, 40, 9, 65, 36, 18, 8, 131, 244, 250, 128, 192, 163, 140, 44, 64, 109, 49, 133, 191, 163, 40, 9, 65, 216, 108, 122, 188, 59, 158, 224, 240, 104, 209, 83, 64, 203, 193, 145, 63, 101, 179, 8, 65, 0, 0, 8, 4, 59, 158, 226, 241, 104, 209, 83, 64, 203, 193, 145, 63, 101, 179, 8, 65, 52, 26, 248, 124, 4, 2, 130, 193, 104, 209, 83, 64, 203, 193, 145, 63, 101, 179, 8, 65, 216, 108, 122, 188, 59, 158, 226, 241, 86, 56, 128, 63, 30, 224, 44, 191, 90, 216, 206, 64, 36, 18, 8, 131, 238, 247, 128, 192, 86, 56, 128, 63, 30, 224, 44, 191, 90, 216, 206, 64, 236, 118, 16, 135, 61, 159, 226, 241, 86, 56, 128, 63, 30, 224, 44, 191, 90, 216, 206, 64, 216, 108, 122, 188, 59, 158, 226, 241, 252, 118, 172, 63, 226, 21, 20, 63, 254, 56, 204, 64, 52, 26, 248, 124, 4, 2, 132, 194, 252, 118, 172, 63, 226, 21, 20, 63, 254, 56, 204, 64, 236, 118, 16, 135, 57, 157, 230, 243, 252, 118, 172, 63, 226, 21, 20, 63, 254, 56, 204, 64, 216, 108, 122, 188, 59, 158, 228, 242)
}]

[node name="Character" type="Node3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 7.10543e-15, 0, 1, 0, 1.42109e-14, 0, 1, -9.31323e-10, 0, -8.14188e-17)
script = ExtResource("1_1ajbp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody3D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_5fh1y")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.78798, 0)
shape = SubResource("BoxShape3D_g2353")

[node name="Head" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.29353e-08, 3.275, 0.262349)

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/Head"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.00484368, 0.0364151, -0.25754)
fov = 80.0

[node name="InteractRay" type="RayCast3D" parent="CharacterBody3D/Head/Camera3D"]
transform = Transform3D(-2.85, -2.49155e-07, -1.08909e-14, 0, -1.24577e-07, 2.85, -2.49155e-07, 2.85, 1.24577e-07, -0.02, -0.0320001, -0.189651)
collision_mask = 8
collide_with_areas = true
script = ExtResource("2_dbs4o")

[node name="crosshair" type="RichTextLabel" parent="CharacterBody3D/Head/Camera3D/InteractRay"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -17.0
offset_right = 120.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = SubResource("FontVariation_4114j")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]·[/center]"
scroll_active = false

[node name="hands" type="Node3D" parent="CharacterBody3D/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.29353e-08, -3.275, -0.262349)

[node name="parem" type="MeshInstance3D" parent="CharacterBody3D/Head/hands"]
transform = Transform3D(-0.0125929, -3.62384e-09, 0, 0, 0, -0.0651538, 1.10091e-09, -0.0414519, 0, -0.371251, 1.43486, -0.0498652)
mesh = SubResource("5")
skeleton = NodePath("../../../..")

[node name="vasak" type="MeshInstance3D" parent="CharacterBody3D/Head/hands"]
transform = Transform3D(0.0125929, 0, 0, 0, 0.0414519, 0, 0, 0, 0.0651538, 0.43067, 2.26176, 1.38711)
mesh = SubResource("5")
skeleton = NodePath("../../../..")

[node name="inventory" type="Control" parent="CharacterBody3D/Head/hands"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_jv40k")

[node name="inv1" type="ColorRect" parent="CharacterBody3D/Head/hands/inventory"]
layout_mode = 0
offset_right = 145.0
offset_bottom = 145.0

[node name="kubik" type="Sprite2D" parent="CharacterBody3D/Head/hands/inventory/inv1"]
visible = false
position = Vector2(72.75, 71.75)
scale = Vector2(0.289, 0.289)
texture = ExtResource("9_d0grp")

[node name="inv2" type="ColorRect" parent="CharacterBody3D/Head/hands/inventory"]
layout_mode = 0
offset_left = 155.0
offset_right = 300.0
offset_bottom = 145.0
color = Color(1, 1, 1, 0.286275)

[node name="nuga" type="Sprite2D" parent="CharacterBody3D/Head/hands/inventory/inv2"]
visible = false
position = Vector2(72.625, 72.625)
scale = Vector2(0.219985, 0.219985)
texture = ExtResource("10_q5xid")

[node name="inv3" type="ColorRect" parent="CharacterBody3D/Head/hands/inventory"]
layout_mode = 0
offset_left = 310.0
offset_right = 455.0
offset_bottom = 145.0
color = Color(1, 1, 1, 0.286275)

[node name="syringe" type="Sprite2D" parent="CharacterBody3D/Head/hands/inventory/inv3"]
visible = false
position = Vector2(73, 73)
scale = Vector2(0.42407, 0.42407)
texture = ExtResource("11_p0neb")

[connection signal="knife" from="CharacterBody3D/Head/Camera3D/InteractRay" to="CharacterBody3D/Head/hands/inventory" method="_on_interact_ray_knife"]
[connection signal="kubikinteract" from="CharacterBody3D/Head/Camera3D/InteractRay" to="CharacterBody3D/Head/hands/inventory" method="_on_interact_ray_kubikinteract"]
[connection signal="syringe" from="CharacterBody3D/Head/Camera3D/InteractRay" to="CharacterBody3D/Head/hands/inventory" method="_on_interact_ray_syringe"]
